# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
edition = "2021"
license = "EUPL-1.2"
name = "kustos"
publish = false
version.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kustos-shared = { workspace = true, features = ["internal"] }
opentalk-database.workspace = true
opentalk-types.workspace = true

## Database migration
barrel = { version = "0.7", features = ["pg"] }

### Error handling
snafu.workspace = true

### Database ORM
diesel = { workspace = true, features = ["chrono", "serde_json", "uuid"] }
diesel-async.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }

### ACL synchronization
lapin.workspace = true
lapin-pool.workspace = true
serde.workspace = true
serde_json.workspace = true

### Logging utilities
log = { workspace = true, features = ["serde"] }
tracing.workspace = true
tracing-futures = "0.2"

### QoL
async-trait = "0.1"
futures.workspace = true
itertools.workspace = true

parking_lot.workspace = true
tokio = { workspace = true, features = ["macros"] }

### TODO(r.floren) add this as a default feature
actix-web.workspace = true

### Opentelementry metrics
opentelemetry.workspace = true

[dependencies.casbin]
features = ["incremental", "runtime-tokio", "watcher"]
workspace = true

[dev-dependencies]
env_logger.workspace = true
pretty_assertions.workspace = true
serial_test.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
url.workspace = true

# TODO(r.floren) remove this in the future. Currently used to migrate in tests. Find something lighter.
opentalk-db-storage.workspace = true
