# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "lapin-pool"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
publish = false

[dependencies]
lapin.workspace = true
anyhow.workspace = true
tokio.workspace = true
tokio-reactor-trait = "1"
tokio-executor-trait = "2"
log.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
