# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
edition = "2021"
license = "EUPL-1.2"
name = "lapin-pool"
publish = false
version.workspace = true

[dependencies]
lapin.workspace = true
log.workspace = true
snafu.workspace = true
tokio.workspace = true
tokio-executor-trait = "2"
tokio-reactor-trait = "1"

[dev-dependencies]
pretty_assertions.workspace = true
